chore: Dockerfile GC 로그 옵션 제거