@@ -8,4 +8,4 @@ COPY build/libs/*.jar /home/spring/app.jar
 
 ENV SPRING_PROFILE=prod
 
-CMD ["sh", "-c", "exec java -Dspring.profiles.active=${SPRING_PROFILE} -Xmx512m -Xms256m -Xlog:gc*:file=/home/spring/log/gc.log:time,uptimemillis,tags,level:filecount=7,filesize=20m -jar /home/spring/app.jar"]
+CMD ["sh", "-c", "exec java -Dspring.profiles.active=${SPRING_PROFILE} -Xmx512m -Xms256m -jar /home/spring/app.jar"]
